tests/baselines/reference/computedPropertyNames35_ES5.errors.txt
tests/cases/conformance/es6/computedProperties/computedPropertyNames35_ES5.ts(4,5): error TS1169: A computed property name in an interface must directly refer to a built-in symbol.
tests/cases/conformance/es6/computedProperties/computedPropertyNames35_ES5.ts(4,10): error TS2467: A computed property name cannot reference a type parameter from its containing type.


==== tests/cases/conformance/es6/computedProperties/computedPropertyNames35_ES5.ts (2 errors) ====
    function foo<T>() { return '' }
    interface I<T> {
        bar(): string;
        [foo<T>()](): void;
        ~~~~~~~~~~
!!! error TS1169: A computed property name in an interface must directly refer to a built-in symbol.
             ~
!!! error TS2467: A computed property name cannot reference a type parameter from its containing type.
    }